quorum/test/tests/TypeChecker/Pass/BooleanGetText.quorum
class Main
    action Main
        Boolean t 
        t:SetValue(false)
        boolean p = false

        print t:GetText()
        print p:GetText()
    end
end