quorum/test/tests/TypeChecker/Fail/ImpAssignTextBoolObj.quorum
Boolean b
b:setValue(true)
text t = b